[gd_scene load_steps=4 format=3 uid="uid://qrvebswx2jay"]

[ext_resource type="Texture2D" uid="uid://biqlwjaof024r" path="res://assets/PNG/grey_button00.png" id="1_i0hvj"]
[ext_resource type="Texture2D" uid="uid://p67q0xgqxxh8" path="res://assets/PNG/grey_button01.png" id="2_swxq0"]
[ext_resource type="Script" path="res://scripts/upgrade_choice.gd" id="3_ns7lj"]

[node name="UpgradeChoice" type="TextureButton"]
process_mode = 3
modulate = Color(1, 1, 1, 0.745098)
custom_minimum_size = Vector2(320, 96)
offset_right = 320.0
offset_bottom = 96.0
texture_normal = ExtResource("2_swxq0")
texture_pressed = ExtResource("1_i0hvj")
texture_hover = ExtResource("1_i0hvj")
texture_focused = ExtResource("1_i0hvj")
stretch_mode = 0
script = ExtResource("3_ns7lj")

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 314.0
offset_bottom = 90.0
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
